common/firefox/*  Makefile-libhippofirefox.am configure.ac:   Stub firefox extension
common/hippoipc Makefile-libhippoipc.am: C++ glue library 
  between browser and client
linux/hippoipc/*: D-Bus provider class for HippoIPC

linux/hippoipc/test-hippo-ipc.c Makefile-test-hippo-ipc.am: Simple
 test provider for HippoIPC via D-Bus

common/hippo-ipc-source.c: Gobject to glue a IPC "source" onto
  the data model

linux/{hippo-dbus-client.c,hippo-dbus-server.c}: Change JoinChat method
 to ShowChatWindow.to match HippoIPC interfaces
linux/src/hippo-dbus-server.c: Export the data model provider interface 
  via D-BUS
linux/src/main.[ch]: Add hippo_app_get_data_cache()

hippo-dbus-client.h: Add #defines for the listener interface

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -41,6 +41,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-entity.c			\
 	$(COMMONSRCDIR)/hippo/hippo-entity.h			\
 	$(COMMONSRCDIR)/hippo/hippo-entity-protected.h		\
+	$(COMMONSRCDIR)/hippo/hippo-ipc-source.c		\
+	$(COMMONSRCDIR)/hippo/hippo-ipc-source.h		\
 	$(COMMONSRCDIR)/hippo/hippo-myspace.c			\
 	$(COMMONSRCDIR)/hippo/hippo-myspace.h			\
 	$(COMMONSRCDIR)/hippo/hippo-person.c			\
@@ -61,8 +63,8 @@ BUILT_SOURCES += $(LIBHIPPO_BUILT_SOURCEFILES)
 ## ../common to distdir/../common which puts common outside of distdir.
 ## so we handle the disting manually so the destination is always distdir/common-dist
 nodist_libhippo_la_SOURCES=$(LIBHIPPO_SOURCEFILES) $(LIBHIPPO_BUILT_SOURCEFILES)
-dist-hook:
-	mkdir $(distdir)/common-dist
+libhippo-dist-hook:
+	-mkdir $(distdir)/common-dist
 	mkdir $(distdir)/common-dist/hippo
 	cp $(COMMONSRCDIR)/hippo/hippo-common-marshal.list $(distdir)/common-dist/hippo
 	cp $(LIBHIPPO_SOURCEFILES) $(distdir)/common-dist/hippo
