--- a/dumbhippo/trunk/client/linux/Makefile.am
+++ b/dumbhippo/trunk/client/linux/Makefile.am
@@ -33,14 +33,23 @@ distclean-local:
 	  rmdir $(BUILT_SRC_DIR) ;		\
 	fi
 
+dist-hook: libhippo-dist-hook libhippoipc-dist-hook libhippofirefox-dist-hook
+.PHONY: libhippo-dist-hook libhippoipc-dist-hook libhippofirefox-dist-hook
+
 # These are added to using += in the included files
 bin_PROGRAMS = 
+noinst_PROGRAMS =
 noinst_LTLIBRARIES =
+DISTCLEANFILES =
 MAINTAINERCLEANFILES =
 BUILT_SOURCES =
 
+include Makefile-libhippoipc.am
 include Makefile-libhippo.am
 include Makefile-libgtkcopy.am
+include Makefile-libhippofirefox.am
 include Makefile-mugshot.am
 include Makefile-mugshot-uri-handler.am
+include Makefile-test-hippo-ipc.am
 include Makefile-icons.am
+
