Makefile-libhippofirefox: Link to libhippoipc Makefile.am: Define HIPPO_OS_LINUX to allow us to conditionalize on platform hippo-ipc.h hippo-ipc-locator.cpp: Flesh out the HippoIpcLocator idea hippo-dbus-ipc-locator.cpp Makefile-libhippoipc.am: HippoDBusIpcLocator test-hippo-ipc.cpp: Use HippoIpcLocator hippoIService.idl hippoIServiceListener.idl: Various fixes, make it match HippoIpcController hippoService.cpp: Hook it up!

--- a/dumbhippo/trunk/client/linux/Makefile-libhippofirefox.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippofirefox.am
@@ -34,7 +34,7 @@ component_DATA =				\
 	hippoIServiceListener.xpt
 
 libhippofirefox_la_LDFLAGS = -avoid-version -module
-libhippofirefox_la_LIBADD = $(LIBHIPPOFIREFOX_LIBS)
+libhippofirefox_la_LIBADD = $(LIBHIPPOFIREFOX_LIBS) libhippoipc.la
 
 libhippofirefox_la_CPPFLAGS =			\
 	$(AM_CPPFLAGS)				\
