com.dumbhippo.statistics: Server-side statistics collection facility jboss-service.xml: Add another service to start/stop statistics collection com.dumbhippo.live.LiveStatistics: Start of data collection for the   LiveState cache com.dumbhippo.web.WebStatistis RewriteServlet HttpMethodsServlet: Start of   data collection for the web frontend super/base.conf super/jboss/files/data/statistics: directory where the   collected statistics files go

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -210,6 +210,7 @@
 
 		<targetAttributes pattern="/data/files"	 ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/index"	 ignore="yes" preserve="yes"/>
+		<targetAttributes pattern="/data/statistics"   ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/**" ignore="yes"/>
 		<targetAttributes pattern="/log"   ignore="yes"/> 
 		<targetAttributes pattern="/run/*" ignore="yes"/> 
