--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -207,6 +207,7 @@
 				<include name="**/services/*.class" />
 				<include name="**/server/**/*.class" />
 				<include name="**/server/**/*.properties" />
+				<include name="**/statistics/**/*.class" />
 			</fileset>
 			<manifest>
 				<attribute name="Class-Path" value="${bundled-classpath}" />
