Add mocked-up version of statistics HTML page

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -154,6 +154,7 @@
 			<!-- our javascript code -->
 			<fileset dir="${web}" includes="javascript/*.js"/>
 			<fileset dir="${web}" includes="javascript/dh/*.js"/>
+			<fileset dir="${web}" includes="javascript/dh/statistics/*.js"/>
 
 			<!-- dojo.js is either in target/javascript (if compressed) 
 				or web/javascript (if not) -->
