Preserve all log files.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -124,7 +124,7 @@
 			   expand="yes"/>
 
 		<targetAttributes pattern="/data/*" ignore="yes" preserve="yes"/> 
-		<targetAttributes pattern="/log/*"	ignore="yes"/> 
+		<targetAttributes pattern="/log/*"	ignore="yes" preserve="yes"/> 
 		<targetAttributes pattern="/run/*"	ignore="yes"/>
 
 		<parameter name="startCommand">$targetdir/scripts/mysql-start.sh</parameter>
@@ -150,7 +150,7 @@
 			   expand="yes"/>
 
 		<targetAttributes pattern="/data/*" ignore="yes" preserve="yes"/> 
-		<targetAttributes pattern="/log/*"	ignore="yes"/> 
+		<targetAttributes pattern="/log/*"	ignore="yes" preserve="yes"/> 
 		<targetAttributes pattern="/run/*"	ignore="yes"/>
 
 		<parameter name="startCommand">$targetdir/scripts/pgsql-start.sh</parameter>
@@ -212,7 +212,7 @@
 		<targetAttributes pattern="/data/index"	 ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/statistics"   ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/**" ignore="yes"/>
-		<targetAttributes pattern="/log"   ignore="yes"/> 
+		<targetAttributes pattern="/log"   ignore="yes" preserve="yes"/> 
 		<targetAttributes pattern="/run/*" ignore="yes"/> 
 		<targetAttributes pattern="/tmp"   ignore="yes"/> 
 		<targetAttributes pattern="/work"  ignore="yes"/> 
@@ -247,7 +247,7 @@
 		<merge src="$jivedir/plugins/hippo.jar"
 			   dest="plugins/hippo.jar"/>
 
-		<targetAttributes pattern="/logs/*"	 ignore="yes"/>
+		<targetAttributes pattern="/logs/*"	 ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/run/*"	ignore="yes"/>
 
 		<!-- Jive likes to rewrite its config file with different whitespace, so
@@ -276,7 +276,7 @@
 		<merge src="$imbotdir/lib"
 			   dest="lib"/>
 
-		<targetAttributes pattern="/logs/*"	 ignore="yes"/>
+		<targetAttributes pattern="/logs/*"	 ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/run/*"	ignore="yes"/>
 
 		<parameter name="startCommand">$targetdir/scripts/imbot-start.sh</parameter>
