Cherrypick r2950 from trunk.

--- a/dumbhippo/branches/production/server/build.xml
+++ b/dumbhippo/branches/production/server/build.xml
@@ -170,6 +170,7 @@
 			
 			<!-- our static pages, css, etc. -->
 			<fileset dir="${web}" includes="html/*.html" />
+			<fileset dir="${web}" includes="html/robots.txt" />
 			<fileset dir="${web}" includes="images*/*.gif" />
 			<fileset dir="${web}" includes="images*/*.png" />
 			<fileset dir="${web}" includes="images*/*.jpg" />
