Rename stdafx.h so it is different for each project, the alternative is confusion

--- a/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoExplorer/HippoExplorer.vcproj
@@ -222,7 +222,7 @@
 				RelativePath=".\Resource.h">
 			</File>
 			<File
-				RelativePath=".\stdafx.h">
+				RelativePath=".\stdafx-hippoexplorer.h">
 			</File>
 		</Filter>
 		<Filter
