--- a/dumbhippo/trunk/client/windows/HippoShellExt/HippoShellExt.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoShellExt/HippoShellExt.vcproj
@@ -27,6 +27,7 @@
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				UsePrecompiledHeader="3"
+				PrecompiledHeaderThrough="stdafx-hipposhellext.h"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="4"/>
@@ -76,6 +77,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;HIPPOSHELLEXT_EXPORTS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="3"
+				PrecompiledHeaderThrough="stdafx-hipposhellext.h"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="3"/>
@@ -166,7 +168,7 @@
 				RelativePath=".\HippoShellExt.h">
 			</File>
 			<File
-				RelativePath=".\stdafx-hippshellext.h">
+				RelativePath=".\stdafx.h">
 			</File>
 		</Filter>
 		<Filter
