Resolve bug 396 (add amazon affiliate IDs in music radar):  - CachedAmazonAlbumData: split productUrl into two fields, productUrlPart1    and productUrlPart2, since the URLs returned from Amazon Web Services    get too long to fit in a single field in our current version of MySQL.    Class interface remains the same.  - HippoProperty, base.conf, properties-service.xml: add affiliate tag param  - AmazonItemSearch, AmazonItemLookup, AmazonUpdater, AmazonAlbumCacheBean:    tack on the affiliate tag if specified
NOTE: Database update -- just do a 'drop CachedAmazonAlbumData' to in 
existing databases and let JBoss recreate it; this is all soft state.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -107,6 +107,9 @@
 	<!-- you have to create an Amazon web services account and put the key here -->
 	<parameter name="amazonAccessKeyId"></parameter>
 	
+	<!-- if you participate in the Amazon affiliate program, optionally put your affiliate tag here -->
+	<parameter name="amazonAssociateTag"></parameter>	
+	
 	<!-- you must specify a Yahoo! web services application ID here -->
 	<parameter name="yahooAppId">dumbhippo</parameter>
 
